--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
+  google_fonts: ^4.0.4
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
