--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.6.3
   google_fonts: ^4.0.4
   font_awesome_flutter: ^10.4.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
